Thu Mar  3 00:36:29 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rexml/encoding.rb (REXML::Encoding#encoding=): store @encoding
	  a String which means the name of the encoding.
	  this partially revert r29646.

	* lib/rexml/document.rb: follow above.

	* lib/rexml/output.rb: ditto.

	* lib/rexml/parsers/baseparser.rb: ditto.

	* lib/rexml/source.rb: ditto.

	* lib/rexml/xmldecl.rb: ditto.

Wed Mar  2 23:19:56 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_byte_substr): return nil for negative length.

Wed Mar  2 21:15:00 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_pkey_dh.c: parenthesize macro arguments.

Wed Mar  2 14:24:04 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit/parallel.rb: Fix name from `inclement_io` to
	  `increment_io`.

Wed Mar  2 14:06:01 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_slice_bang): move treatments which is only needed
	  when the result is not nil.

Wed Mar  2 14:02:29 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/testunit/test_parallel.rb(TestParallel#spawn_runner):
	  Fix outputing empty line in running test.

	* test/testunit/tests_for_parallel/test_third.rb: Remove `sleep`

Tue Mar  1 22:29:10 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_pkey.h: parenthesize macro arguments.

Tue Mar  1 22:02:35 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit/parallel.rb: Fix number.

Tue Mar  1 21:48:22 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit/parallel.rb: For Windows.

	* test/testunit/test_parallel.rb(TestParallelWorker#test_quit_in_test):
	  Fix for above specification change.
	* test/testunit/test_parallel.rb(TestParallel#spawn_runner):
	  Fix outputing empty line in running test.

Tue Mar  1 20:51:57 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_system.rb (TestSystem#test_system_at):
	  remove tests for [bug#4396]. because we decided to reject this
	  ticket.
